# DeliriumStudioV

./: .gitignore  CMakeLists.txt  README.md
StudioV/: CMakeLists.txt  main.cpp
brand/: DeliriumStudioV-Logo.afdesign
lib/: libgui.lib
libgui/: CMakeLists.txt  api.h  mainwindow.cpp  mainwindow.h  res.qrc  resourceloader.cpp  resourceloader.h
libgui/components/: toolbar.cpp  toolbar.h
libgui/res/qts/: dialog.qts  menu.qts  menuBar.qts  tabWidget.qts  toolBar.qts
libgui/views/: arrangement.cpp  arrangement.h
win/: libgui.lib
